--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Um bot que irá moderar e deixar sua ">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Ballet Bot - Modere a sua comunidade do Discord</title>
 </head>
 <body>
     <header>
-        <img src="../img/logo.svg" alt="logo da Comunidade Ballerini">
+        <img src="./img/logo.svg" alt="logo da Comunidade Ballerini">
         <nav>
             <a>Comunidade Ballerini</a>
             <a>Tutorial</a>
@@ -18,16 +19,17 @@
     </header>
 
     <main>
-        <section>
+        <section class="primary">
             <div>
-                <h1>Balle Bot</h1>
-                <h2>Deixe a sua comunidade segura de um jeito fácil</h2>
-                <button>Me adicione</button>
+                <h1 id="title">Balle Bot</h1>
+                <h2 id="sub-title">Deixe a sua comunidade segura de um jeito fácil</h2>
+                <button id="button">Me adicione</button>
             </div>
-            <img src="../img/ballebot.svg" alt="imagem da Balle Bot">
+            <img src="./img/ballebot.svg" alt="imagem da Balle Bot">
         </section>
-        <section>
-            <h3>O que ela faz por você?</h3>
+
+        <section class="secundary">
+            <h3 id="tree-title">O que ela faz por você?</h3>
             <p>1. Cria um <strong>sistema de verificação capcha</strong> para novos membros garantirem que não são robôs</p>
             <p>2. Possui um <strong>sistema de banimento automático</strong> para links suspeitos que forem enviados na comunidade</p>
             <p>3. <strong>Sistema de avisos e banimento manual</strong>, para pessoas administradoras utilizarem</p>
@@ -36,8 +38,8 @@
 
     </main>
 
-    <footer>
-        <img src="/img/BALLERINI.svg" alt="logo Ballerini">
+    <footer class="rodape">
+        <img src="./img/ballerini.svg" alt="logo Ballerini">
 
     </footer>
 </body>
